# Yavque

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  gen_udr.py  test.npy
Tests/: CMakeLists.txt  TestBackwardGrad.cpp  TestCircuit.cpp  TestDiagonalHamEvol.cpp  TestGrad.cpp  TestHamEvol.cpp  TestProductHamEvol.cpp  TestSingleQubitOperator.cpp  TestSumLocalHamEvol.cpp  TestSumPauliString.cpp  TestSumPauliStringHamEvol.cpp  TestTFI.cpp  TestTwoQubitOperator.cpp  TestTwoQubitUnitary.cpp  common.hpp
build_utils/: yavque_files.py
cmake/: get_blas_version.cmake
examples/: PauliHamiltonian.hpp  TFI.cpp  diagonal_product_tfi.cpp  example_utils.cpp  example_utils.hpp  qaoa_cluster.cpp  qaoa_tfi.cpp  qaoa_tfi_diag.cpp  qaoa_tfi_pauli.cpp  qaoa_tfi_ti.cpp  solve_chem.cpp  ti_tfi.cpp
include/: BitOperations.h  Circuit.hpp  Counter.hpp  HamEvol.hpp  Hamiltonian.hpp  NonHermitian.hpp  Operator.hpp  QuantumState.hpp  State.hpp  UnitaryOperator.hpp  Univerate.hpp  Variable.hpp  backward_grad.hpp  energy_grad.hpp  operators.hpp  test.cpp  utility.hpp  utils.hpp  yavque.hpp
include/Operators/: CompressedPauliString.hpp  DenseHermitianMatrix.hpp  DiagonalHamEvol.hpp  DiagonalOperator.hpp  HamEvol.hpp  Hamiltonian.hpp  NonHermitian.hpp  Operator.hpp  ProductHamEvol.hpp  SingleQubitHamEvol.hpp  SingleQubitOperator.hpp  SparseOperator.hpp  SumLocalHam.hpp  SumLocalHamEvol.hpp  SumPauliString.hpp  SumPauliStringHamEvol.hpp  TwoQubitOperator.hpp  operators.hpp  utils.hpp
include/Optimizers/: AdaMax.hpp  Adam.hpp  Optimizer.hpp  OptimizerFactory.hpp  SGD.hpp  SGDMomentum.hpp
include/Utilities/: apply_operator.hpp  bit_operations.hpp  swap_qubits.hpp
include/yavque/: Circuit.hpp  Counter.hpp  Univariate.hpp  Variable.hpp  VariableImpl.hpp  backward_grad.hpp  operators.hpp  optimizers.hpp  utils.hpp
include/yavque/Operators/: CompressedPauliString.hpp  DenseHermitianMatrix.hpp  DiagonalHamEvol.hpp  DiagonalOperator.hpp  HamEvol.hpp  Hamiltonian.hpp  Operator.hpp  SingleQubitHamEvol.hpp  SingleQubitOperator.hpp  SumLocalHam.hpp  SumLocalHamEvol.hpp  SumPauliString.hpp  SumPauliStringHamEvol.hpp  SumTwoLocalHam.cpp  TwoQubitOperator.hpp
include/yavque/Optimizers/: AdaMax.hpp  Adam.hpp  Optimizer.hpp  OptimizerFactory.hpp  SGD.hpp  SGDMomentum.hpp
include/yavque/Utilities/: apply_operator.hpp  bit_operations.hpp  pauli_operators.hpp  swap_qubits.hpp  typedefs.hpp
src/: Circuit.cpp  VariableImpl.cpp  backward_grad.cpp  trotter.cpp  utility.cpp
src/Operators/: SumPauliString.cpp  utils.cpp
src/Utilities/: pauli_operators.cpp
tests/: .clang-tidy  CMakeLists.txt  TestBackwardGrad.cpp  TestCircuit.cpp  TestDiagonalHamEvol.cpp  TestGrad.cpp  TestHamEvol.cpp  TestPauliOperators.cpp  TestSingleQubitOperator.cpp  TestSumLocalHamEvol.cpp  TestSumPauliString.cpp  TestSumPauliStringHamEvol.cpp  TestTFI.cpp  TestTwoQubitOperator.cpp  common.hpp
